--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,6 +39,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
+    "reactotron-react-native": "^5.1.12",
     "typescript": "5.0.4"
   },
   "engines": {
