--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.1.4",
     "@react-navigation/stack": "^7.2.8",
+    "@tanstack/react-query": "^5.71.10",
+    "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-colors": "^1.5.2",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
